--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "1.7"
+version: "1.8"
 services:
   gatway:
     image: massoft/masbillergateway:v1.0.0
@@ -7,7 +7,7 @@ services:
       - "7000:7000"
       - "8090:8090"
   biller:
-    image: massoft/masbiller:v2.6.1
+    image: massoft/masbiller:v2.6.2
     restart: always
     environment:
       MAS_DB_CONNECTION: "server=host.docker.internal;database=giza;user id=sa;password=hcs@mas"
@@ -16,10 +16,10 @@ services:
     ports:
       - "9002:9002"
   applications:
-    image: massoft/applications:v2.0.4
+    image: massoft/applications:v2.0.8
     restart: always
     environment:
-      MAS_DB_CONNECTION: "server=host.docker.internal;database=giza;user id=sa;password=hcs@mas"
+      MAS_DB_CONNECTION: "server=host.docker.internal;database=giza;user id=sa;password=M@s"
       MAS_MAX_DB_CONNECTIONS: 100
       MAS_IDLE_DB_CONNECTION:  10
     ports:
@@ -28,22 +28,22 @@ services:
     image: massoft/maslogin:v1.0.1
     restart: always
     environment:
-      MAS_DB_CONNECTION: "server=host.docker.internal;database=giza;user id=sa;password=hcs@mas"
+      MAS_DB_CONNECTION: "server=host.docker.internal;database=giza;user id=sa;password=M@s"
       MAS_MAX_DB_CONNECTIONS: 100
       MAS_IDLE_DB_CONNECTION:  10
     ports:
       - "9001:9001"
   masquires:
-    image: massoft/masqueries:v1.0.5
+    image: massoft/masqueries:v1.0.6
     restart: always
     environment:
-      MAS_DB_CONNECTION: "server=host.docker.internal;database=giza;user id=sa;password=hcs@mas"
+      MAS_DB_CONNECTION: "server=host.docker.internal;database=giza;user id=sa;password=M@s"
       MAS_MAX_DB_CONNECTIONS: 100
       MAS_IDLE_DB_CONNECTION:  10
     ports:
       - "9004:9004"
   masclient:
-    image: massoft/masclient:v1.0.4
+    image: massoft/masclient:v1.0.6
     restart: always
     ports:
       - "25566:25566"
