--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,10 +16,10 @@ services:
     ports:
       - "9002:9002"
   applications:
-    image: massoft/applications:v2.0.8
+    image: massoft/applications:v2.0.11
     restart: always
     environment:
-      MAS_DB_CONNECTION: "server=host.docker.internal;database=giza;user id=sa;password=M@s"
+      MAS_DB_CONNECTION: "server=host.docker.internal;database=giza;user id=sa;password=hcs@mas"
       MAS_MAX_DB_CONNECTIONS: 100
       MAS_IDLE_DB_CONNECTION:  10
     ports:
@@ -28,7 +28,7 @@ services:
     image: massoft/maslogin:v1.0.1
     restart: always
     environment:
-      MAS_DB_CONNECTION: "server=host.docker.internal;database=giza;user id=sa;password=M@s"
+      MAS_DB_CONNECTION: "server=host.docker.internal;database=giza;user id=sa;password=hcs@mas"
       MAS_MAX_DB_CONNECTIONS: 100
       MAS_IDLE_DB_CONNECTION:  10
     ports:
@@ -37,13 +37,13 @@ services:
     image: massoft/masqueries:v1.0.6
     restart: always
     environment:
-      MAS_DB_CONNECTION: "server=host.docker.internal;database=giza;user id=sa;password=M@s"
+      MAS_DB_CONNECTION: "server=host.docker.internal;database=giza;user id=sa;password=hcs@mas"
       MAS_MAX_DB_CONNECTIONS: 100
       MAS_IDLE_DB_CONNECTION:  10
     ports:
       - "9004:9004"
   masclient:
-    image: massoft/masclient:v1.0.6
+    image: massoft/masclient:v1.0.7
     restart: always
     ports:
       - "25566:25566"
