--- a/bpm/latest/config/config.json
+++ b/bpm/latest/config/config.json
@@ -21,137 +21,11 @@
   ],
   "grpc_services": [
     {
-      "service_name": "billing.LoginService",
-      "max_call_recv_msg_size": 10000000000,
-      "backends": [
-        {
-          "address": "localhost:9001"
-        }
-      ]
-    },
-    {
-      "service_name": "billing.Engine",
-      "max_call_recv_msg_size": 10000000000,
-      "backends": [
-        {
-          "address": "localhost:9002"
-        }
-      ]
-    },
-    {
-      "service_name": "services.applicationService",
-      "max_call_recv_msg_size": 10000000000,
-      "backends": [
-        {
-          "address": "bpm:9003"
-        }
-      ]
-    },
-    {
-      "service_name": "services.queryService",
-      "max_call_recv_msg_size": 10000000000,
-      "backends": [
-        {
-          "address": "localhost:9004"
-        }
-      ]
-    },
-    {
-      "service_name": "services.CustomerService",
-      "max_call_recv_msg_size": 10000000000,
-      "backends": [
-        {
-          "address": "localhost:9005"
-        }
-      ]
-    },
-    {
-      "service_name": "BillingRepositorySys.IBilngDataSource",
-      "max_call_recv_msg_size": 10000000000,
-      "backends": [
-        {
-          "address": "localhost:9006"
-        }
-      ]
-    },
-    {
-      "service_name": "SystemServices.SystemService",
-      "max_call_recv_msg_size": 10000000000,
-      "backends": [
-        {
-          "address": "localhost:9007"
-        }
-      ]
-    },
-    {
       "service_name": "MasProvider.MasProvider",
       "max_call_recv_msg_size": 10000000000,
       "backends": [
         {
-          "address": "masprovider:9008"
-        }
-      ]
-    },
-    {
-      "service_name": "ApplicationServices.ApplicationService",
-      "max_call_recv_msg_size": 10000000000,
-      "backends": [
-        {
-          "address": "localhost:9011"
-        }
-      ]
-    },
-    {
-      "service_name": "InvoiceServices.InvoiceService",
-      "max_call_recv_msg_size": 10000000000,
-      "backends": [
-        {
-          "address": "localhost:9035"
-        }
-      ]
-    },
-    {
-      "service_name": "ActivityServices.ActivityService",
-      "max_call_recv_msg_size": 10000000000,
-      "backends": [
-        {
-          "address": "localhost:9029"
-        }
-      ]
-    },
-    {
-      "service_name": "PlansAppServices.PlansAppService",
-      "max_call_recv_msg_size": 10000000000,
-      "backends": [
-        {
-          "address": "localhost:9021"
-        }
-      ]
-    },
-    {
-      "service_name": "notifications.NotificationNewsService",
-      "max_call_recv_msg_size": 10000000000,
-      "backends": [
-        {
-          "address": "192.168.1.10:9025"
-        }
-      ]
-    },
-    {
-      "service_name": "int",
-      "max_call_recv_msg_size": 10000000000,
-      "backends": [
-        {
-          "address": "localhost:9012"
-        }
-      ]
-    },
-    {
-      "service_name": "MobileServices.MobileService",
-      "max_call_recv_msg_size": 10000000000,
-      "backends": [
-        {
-          "address": "localhost:9016"
+          "address": "providergateway:9008"
         }
       ]
     },
@@ -160,7 +34,7 @@
       "max_call_recv_msg_size": 10000000000,
       "backends": [
         {
-          "address": "authservice:9010"
+          "address": "auth:9010"
         }
       ]
     },
@@ -169,25 +43,16 @@
       "max_call_recv_msg_size": 10000000000,
       "backends": [
         {
-          "address": "authservice:9009"
+          "address": "auth:9009"
         }
       ]
     },
     {
-      "service_name": "CRMIntegrationPkg.CRM_Integration",
+      "service_name": "ApplicationServices.ApplicationService",
       "max_call_recv_msg_size": 10000000000,
       "backends": [
         {
-          "address": "integration:9015"
-        }
-      ]
-    },
-    {
-      "service_name": "custmodpkg.CustMod",
-      "max_call_recv_msg_size": 10000000000,
-      "backends": [
-        {
-          "address": "localhost:9020"
+          "address": "bpm:9011"
         }
       ]
     },
@@ -201,15 +66,6 @@
       ]
     },
     {
-      "service_name": "masgate.MasPaymentGateway",
-      "max_call_recv_msg_size": 10000000000,
-      "backends": [
-        {
-          "address": "localhost:9027"
-        }
-      ]
-    },
-    {
       "service_name": "CashBox.CashBox",
       "max_call_recv_msg_size": 10000000000,
       "backends": [
@@ -219,75 +75,11 @@
       ]
     },
     {
-      "service_name": "PkgMasCustomers.MasCustomers",
+      "service_name": "MobileServices.MobileService",
       "max_call_recv_msg_size": 10000000000,
       "backends": [
         {
-          "address": "localhost:9028"
-        }
-      ]
-    },
-    {
-      "service_name": "massystem.massystem",
-      "max_call_recv_msg_size": 10000000000,
-      "backends": [
-        {
-          "address": "localhost:9030"
-        }
-      ]
-    },
-    {
-      "service_name": "ein.ein",
-      "max_call_recv_msg_size": 10000000000,
-      "backends": [
-        {
-          "address": "localhost:9032"
-        }
-      ]
-    },
-    {
-      "service_name": "PkgMasMeetings.MasMeetings",
-      "max_call_recv_msg_size": 10000000000,
-      "backends": [
-        {
-          "address": "localhost:9031"
-        }
-      ]
-    },
-    {
-      "service_name": "PkgEtaAuth.EtaAuth",
-      "max_call_recv_msg_size": 10000000000,
-      "backends": [
-        {
-          "address": "localhost:9033"
-        }
-      ]
-    },
-    {
-      "service_name": "PkgEtaExcel.EtaExcel",
-      "max_call_recv_msg_size": 10000000000,
-      "backends": [
-        {
-          "address": "localhost:9034"
-        }
-      ]
-    },
-    {
-      "service_name": "e_invoice_provider.e_invoice_provider",
-      "max_call_recv_msg_size": 10000000000,
-      "backends": [
-        {
-          "address": "localhost:9036"
-        }
-      ]
-    },
-    {
-      "service_name": "test.google",
-      "max_call_recv_msg_size": 5242880,
-      "is_grpc": false,
-      "backends": [
-        {
-          "address": "https://catfact.ninja"
+          "address": "mobile:9016"
         }
       ]
     }
